syntax = "proto3";

package broadcast;

import "google/protobuf/timestamp.proto";

message RbMsg {
  string id = 1;
  string node_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  string custom_message_id = 4;
  oneof ReliableBroadcast {
    PrePrepareMsg prePrepare = 5;
    PrepareMsg prepare = 6;
    CommitMsg commit = 7;
    AckMsg ack = 8;
  }
}

message PrePrepareMsg {
  bytes payload = 1;
}

message PrepareMsg {
  bytes payload = 1;
}

message CommitMsg {
}

message AckMsg {
}
